Remove id #workedon and template text

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                                             <div class="pos-vertical-center pos-asbolute text-center">
                                                 <div class="heading-block">
                                                     <img alt="Image" src="img/logo-light.png" class="logo image--xs" />
-                                                    <p class="lead">
+                                                    <!-- <p class="lead">
                                                         A robust, multipurpose HTML template with
                                                         <br class="hidden-xs hidden-sm" /> over 290 interface blocks.
-                                                    </p>
+                                                    </p> -->
                                                 </div>
                                                 <ul class="menu-vertical">
                                                     <li class="h4">
@@ -104,7 +104,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
-                            <h1 id="#workedon">What I've Worked On</h1>
+                            <h1>What I've Worked On</h1>
                         </div>
                     </div>
                 </div>
