Update - Add meta data description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Alhazme - Professional Mobile Application Engineer</title>
+        <meta name="description" content="Professional Mobile Application Engineer, iOS Developer, iOS Dev, Android Developer, Android Dev based on Malang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -20,7 +21,7 @@
                     <div class="row align-items-center">
                         <div class="col-6">
                             <div class="bar__module">
-                                <a href="index.html">
+                                <a href="index.html" rel="external nofollow">
                                     <img class="logo logo-dark" alt="logo" src="img/logo-dark.png" />
                                     <img class="logo logo-light" alt="logo" src="img/logo-light.png" />
                                 </a>
@@ -44,13 +45,13 @@
                                                 </div>
                                                 <ul class="menu-vertical">
                                                     <li class="h4">
-                                                        <a href="#">Home</a>
+                                                        <a href="#" rel="external nofollow">Home</a>
                                                     </li>
                                                     <li class="h4">
-                                                        <a href="#">What I've Worked on</a>
+                                                        <a href="#" rel="external nofollow">What I've Worked on</a>
                                                     </li>
                                                     <li class="h4">
-                                                        <a href="#">Contact</a>
+                                                        <a href="#" rel="external nofollow">Contact</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -58,22 +59,22 @@
                                             <div class="pos-absolute pos-bottom text-center">
                                                 <ul class="social-list list-inline list--hover">
                                                     <li>
-                                                        <a href="https://github.com/alhazme" target="_blank">
+                                                        <a href="https://github.com/alhazme" target="_blank" rel="external nofollow">
                                                             <i class="socicon socicon-github icon icon--xs"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="https://instagram.com/alhaz.me" target="_blank">
+                                                        <a href="https://instagram.com/alhaz.me" target="_blank" rel="external nofollow">
                                                             <i class="socicon socicon-instagram icon icon--xs"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="https://twitter.com/aizcheryz" target="_blank">
+                                                        <a href="https://twitter.com/aizcheryz" target="_blank" rel="external nofollow">
                                                             <i class="socicon socicon-twitter icon icon--xs"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="https://www.facebook.com/aizcheryz" target="_blank">
+                                                        <a href="https://www.facebook.com/aizcheryz" target="_blank" rel="external nofollow">
                                                             <i class="socicon socicon-facebook icon icon--xs"></i>
                                                         </a>
                                                     </li>
@@ -117,7 +118,7 @@
                                 <span class="block type--fine-print">Oct 2016 - Nov 2016 at <a href="https://montazze.com/">Montazze Studio</a></span>
                                 <h1>mLis</h1>
                                 <p class="lead"> Mobile application platform by Laboratorium Klinik Sakura for internal purpose.</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">See More<br></span> </a> </div>
+                                <a class="btn btn--primary type--uppercase" href="#customise-template" rel="external nofollow"> <span class="btn__text">See More<br></span> </a> </div>
                         </div>
                         <div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="img/portfolio/gallery/mlis/mlis-mainmenu.png"> </div>
                     </div>
@@ -128,10 +129,10 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-5 col-md-7">
                             <div class="mt--2">
-                                <span class="block type--fine-print">Sep 2016 - Oct 2016 at <a href="https://montazze.com/">Montazze Studio</a></span>
+                                <span class="block type--fine-print">Sep 2016 - Oct 2016 at <a href="https://montazze.com/" rel="external nofollow">Montazze Studio</a></span>
                                 <h1>Lab Sakura</h1>
                                 <p class="lead">Mobile application platform for online clinics operated by Laboratorium Klinik Sakura.</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#customise-template" rel="external nofollow"> <span class="btn__text">
 							See More</span> </a> </div>
                         </div>
                         <div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="img/portfolio/gallery/labsakura/labsakura-homeservice.png"> </div>
@@ -143,10 +144,10 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-5 col-md-7">
                             <div class="mt--2">
-                                <span class="block type--fine-print">May 2016 at <a href="https://montazze.com/">Montazze Studio</a></span>
+                                <span class="block type--fine-print">May 2016 at <a href="https://montazze.com/" rel="external nofollow">Montazze Studio</a></span>
                                 <h1>The Graph</h1>
                                 <p class="lead">The most powerfull tools for searching and targeting your market inside Facebook.</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#customise-template" rel="external nofollow"> <span class="btn__text">
 							See More</span> </a> </div>
                         </div>
                         <div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="img/portfolio/gallery/thegraph/thegraph-searchresult.png"> </div>
@@ -158,10 +159,10 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-5 col-md-7">
                             <div class="mt--2">
-                                    <span class="block type--fine-print">Apr 2015 - May 2016 at <a href="https://montazze.com/">Montazze Studio</a></span>
+                                    <span class="block type--fine-print">Apr 2015 - May 2016 at <a href="https://montazze.com/" rel="external nofollow">Montazze Studio</a></span>
                                 <h1>Chaterpress</h1>
                                 <p class="lead">First social photo printing app in Indonesia where you can chat to collaborate, curate and print laid-back photobook from yout social media accounts.</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#customise-template" rel="external nofollow"> <span class="btn__text">
 							See More</span> </a> </div>
                         </div>
                         <div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="img/portfolio/gallery/chaterpress/chaterpress-photobook.png"> </div>
@@ -173,10 +174,10 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-5 col-md-7">
                             <div class="mt--2">
-                                <span class="block type--fine-print">Oct 2015 - Dec 2015 at <a href="https://montazze.com/">Montazze Studio</a></span>
+                                <span class="block type--fine-print">Oct 2015 - Dec 2015 at <a href="https://montazze.com/" rel="external nofollow">Montazze Studio</a></span>
                                 <h1>Shoutter Clock</h1>
                                 <p class="lead">Mobile application platform for online clinics operated by Laboratorium Klinik Sakura.</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#customise-template" rel="external nofollow"> <span class="btn__text">
 							See More</span> </a> </div>
                         </div>
                         <div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="img/portfolio/gallery/shoutterclock/shoutterclock-dashboard.png"> </div>
@@ -241,17 +242,17 @@
                             <div class="heading-block">
                                 <ul class="list-inline list--hover">
                                     <li>
-                                        <a href="#">
+                                        <a href="#" rel="external nofollow">
                                             <span>What I've Worked on</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#" rel="external nofollow">
                                             <span>Blog</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#" rel="external nofollow">
                                             <span>Work With Me</span>
                                         </a>
                                     </li>
@@ -260,22 +261,22 @@
                             <div>
                                 <ul class="social-list list-inline list--hover">
                                     <li>
-                                        <a href="https://github.com/alhazme" target="_blank">
+                                        <a href="https://github.com/alhazme" target="_blank" rel="external nofollow">
                                             <i class="socicon socicon-github icon icon--xs"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://instagram.com/alhaz.me" target="_blank">
+                                        <a href="https://instagram.com/alhaz.me" target="_blank" rel="external nofollow">
                                             <i class="socicon socicon-instagram icon icon--xs"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/aizcheryz" target="_blank">
+                                        <a href="https://twitter.com/aizcheryz" target="_blank" rel="external nofollow">
                                             <i class="socicon socicon-twitter icon icon--xs"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/aizcheryz" target="_blank">
+                                        <a href="https://www.facebook.com/aizcheryz" target="_blank" rel="external nofollow">
                                             <i class="socicon socicon-facebook icon icon--xs"></i>
                                         </a>
                                     </li>
