Add blog link and contact

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                                                         <a href="#" rel="external nofollow">What I've Worked on</a>
                                                     </li>
                                                     <li class="h4">
+                                                        <a href="#" rel="external nofollow">Blog</a>
+                                                    </li>
+                                                    <li class="h4">
                                                         <a href="#" rel="external nofollow">Contact</a>
                                                     </li>
                                                 </ul>
@@ -253,7 +256,7 @@
                                     </li>
                                     <li>
                                         <a href="#" rel="external nofollow">
-                                            <span>Work With Me</span>
+                                            <span>Contact</span>
                                         </a>
                                     </li>
                                 </ul>
